--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,36 +17,41 @@ h2 { text-align:center; color:#1abc9c; }
 <div class="container">
   <h2>AfriPay Bridge</h2>
   
+  <input type="text" id="name" placeholder="Full Name">
   <input type="email" id="email" placeholder="Email">
   <input type="password" id="password" placeholder="Password">
   <button id="signup">Sign Up</button>
   <button id="login">Login</button>
   
   <div id="walletSection" style="display:none;">
-    <h3>Your Wallet</h3>
+    <h3>Your Wallets</h3>
     <p id="walletInfo">Loading...</p>
-    <button id="createWallet">Create Wallet</button>
+    <button id="createWallet">Create USD Wallet</button>
   </div>
-</div>
-<div id="sendSection" style="display:none;">
-  <h3>Send Money</h3>
-  <input type="text" id="toEmail" placeholder="Recipient Email">
-  <input type="number" id="amount" placeholder="Amount">
-  <button id="sendBtn">Send Money</button>
-</div>
-<div id="cryptoSection" style="display:none;">
-  <h3>Crypto Wallet</h3>
-  <input type="text" id="cryptoCurrency" placeholder="Currency (BTC/USDT)">
-  <input type="number" id="cryptoAmount" placeholder="Amount">
-  <button id="depositBtn">Deposit Crypto</button>
-  <button id="withdrawBtn">Withdraw Crypto</button>
+
+  <div id="sendSection" style="display:none;">
+    <h3>Send Money</h3>
+    <input type="text" id="toEmail" placeholder="Recipient Email">
+    <input type="number" id="amount" placeholder="Amount">
+    <button id="sendBtn">Send Money</button>
+  </div>
+
+  <div id="cryptoSection" style="display:none;">
+    <h3>Crypto Wallet</h3>
+    <input type="text" id="cryptoCurrency" placeholder="Currency (BTC/USDT)">
+    <input type="number" id="cryptoAmount" placeholder="Amount">
+    <button id="depositBtn">Deposit Crypto</button>
+    <button id="withdrawBtn">Withdraw Crypto</button>
+  </div>
 </div>
 
 <script type="module">
 import { auth, db } from "./firebase.js";
 import { createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-auth.js";
-import { collection, addDoc, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-firestore.js";
+import { doc, setDoc, collection, query, where, getDocs, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-firestore.js";
 
+// DOM elements
+const nameInput = document.getElementById("name");
 const emailInput = document.getElementById("email");
 const passwordInput = document.getElementById("password");
 const signupBtn = document.getElementById("signup");
@@ -55,15 +60,36 @@ const walletSection = document.getElementById("walletSection");
 const walletInfo = document.getElementById("walletInfo");
 const createWalletBtn = document.getElementById("createWallet");
 
-// Sign up
+const sendSection = document.getElementById("sendSection");
+const toEmail = document.getElementById("toEmail");
+const amountInput = document.getElementById("amount");
+const sendBtn = document.getElementById("sendBtn");
+
+const cryptoSection = document.getElementById("cryptoSection");
+const cryptoCurrency = document.getElementById("cryptoCurrency");
+const cryptoAmount = document.getElementById("cryptoAmount");
+const depositBtn = document.getElementById("depositBtn");
+const withdrawBtn = document.getElementById("withdrawBtn");
+
+// -------------------- SIGNUP --------------------
 signupBtn.addEventListener("click", async () => {
   try {
     const userCredential = await createUserWithEmailAndPassword(auth, emailInput.value, passwordInput.value);
+    const user = userCredential.user;
+
+    // Automatically create Firestore user document
+    await setDoc(doc(db, "users", user.uid), {
+      name: nameInput.value || "",
+      email: user.email,
+      kycStatus: "pending",
+      createdAt: serverTimestamp()
+    });
+
     alert("Signup successful!");
   } catch(e) { alert(e.message); }
 });
 
-// Login
+// -------------------- LOGIN --------------------
 loginBtn.addEventListener("click", async () => {
   try {
     const userCredential = await signInWithEmailAndPassword(auth, emailInput.value, passwordInput.value);
@@ -71,115 +97,107 @@ loginBtn.addEventListener("click", async () => {
   } catch(e) { alert(e.message); }
 });
 
-// Show wallet section when logged in
+// -------------------- AUTH STATE --------------------
 onAuthStateChanged(auth, async (user) => {
   if(user){
     walletSection.style.display = "block";
-    // Check if wallet exists
-    const q = query(collection(db, "wallets"), where("userId", "==", user.uid));
+    sendSection.style.display = "block";
+    cryptoSection.style.display = "block";
+
+    // Check if USD wallet exists
+    const q = query(collection(db,"wallets"), where("userId","==",user.uid), where("currency","==","USD"));
     const querySnapshot = await getDocs(q);
     if(querySnapshot.empty){
-      walletInfo.textContent = "No wallet found. Create one.";
+      walletInfo.textContent = "No USD wallet found. Click below to create one.";
     } else {
       walletInfo.textContent = "Wallet exists. You can send/receive money.";
     }
   } else {
     walletSection.style.display = "none";
+    sendSection.style.display = "none";
+    cryptoSection.style.display = "none";
   }
 });
 
-// Wallet creation
+// -------------------- CREATE USD WALLET --------------------
 createWalletBtn.addEventListener("click", async () => {
   try {
-    const createWalletFn = "createWallet"; // Cloud Function name
-    const walletRef = await fetch(`https://us-central1-afripay-bridge.cloudfunctions.net/${createWalletFn}`, {
-      method:"POST",
-      headers: {"Content-Type":"application/json"},
-      body: JSON.stringify({currency:"USD", uid:auth.currentUser.uid})
+    const user = auth.currentUser;
+    if(!user) return alert("Login first");
+
+    const walletRef = doc(db, "wallets", `${user.uid}_usd`);
+    await setDoc(walletRef, {
+      userId: user.uid,
+      currency: "USD",
+      balance: 0,
+      isCrypto: false,
+      createdAt: serverTimestamp()
     });
-    const res = await walletRef.json();
-    alert("Wallet created successfully!");
+
+    alert("USD Wallet created!");
+    walletInfo.textContent = "Wallet exists. You can send/receive money.";
   } catch(e){ alert(e.message); }
 });
-  import { collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-firestore.js";
 
-const sendSection = document.getElementById("sendSection");
-const toEmail = document.getElementById("toEmail");
-const amountInput = document.getElementById("amount");
-const sendBtn = document.getElementById("sendBtn");
-
-// Show send section when logged in
-onAuthStateChanged(auth, async (user) => {
-  if (user) sendSection.style.display = "block";
-  else sendSection.style.display = "none";
-});
-
-// Send money
+// -------------------- SEND MONEY --------------------
 sendBtn.addEventListener("click", async () => {
   try {
     const recipientEmail = toEmail.value;
     const amount = parseFloat(amountInput.value);
+    const user = auth.currentUser;
+    if(!user) return alert("Login first");
 
     // Find recipient UID
-    const usersRef = collection(db, "users");
-    const q = query(usersRef, where("email", "==", recipientEmail));
+    const q = query(collection(db,"users"), where("email","==",recipientEmail));
     const querySnapshot = await getDocs(q);
-
-    if (querySnapshot.empty) return alert("Recipient not found");
+    if(querySnapshot.empty) return alert("Recipient not found");
     const toUid = querySnapshot.docs[0].id;
 
+    // Call Cloud Function
     const response = await fetch(`https://us-central1-afripay-bridge.cloudfunctions.net/sendMoney`, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ fromUid: auth.currentUser.uid, toUid: toUid, amount: amount })
+      method:"POST",
+      headers: {"Content-Type":"application/json"},
+      body: JSON.stringify({ fromUid: user.uid, toUid, amount })
     });
-
     const result = await response.json();
-    if (result.success) alert("Money sent successfully!");
+    if(result.success) alert("Money sent!");
     else alert(result.error);
-  } catch (e) {
-    alert(e.message);
-  }
-});
-const cryptoSection = document.getElementById("cryptoSection");
-const cryptoCurrency = document.getElementById("cryptoCurrency");
-const cryptoAmount = document.getElementById("cryptoAmount");
-const depositBtn = document.getElementById("depositBtn");
-const withdrawBtn = document.getElementById("withdrawBtn");
-
-onAuthStateChanged(auth, user => {
-  if(user) cryptoSection.style.display = "block";
-  else cryptoSection.style.display = "none";
+  } catch(e){ alert(e.message); }
 });
 
-// Deposit crypto
+// -------------------- CRYPTO DEPOSIT --------------------
 depositBtn.addEventListener("click", async ()=>{
   try{
-    const res = await fetch(`https://us-central1-afripay-bridge.cloudfunctions.net/cryptoDeposit`,{
+    const user = auth.currentUser;
+    if(!user) return alert("Login first");
+
+    const res = await fetch(`https://us-central1-afripay-bridge.cloudfunctions.net/cryptoDeposit`, {
       method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({uid: auth.currentUser.uid, amount:parseFloat(cryptoAmount.value), currency:cryptoCurrency.value})
+      headers: {"Content-Type":"application/json"},
+      body: JSON.stringify({uid:user.uid, amount:parseFloat(cryptoAmount.value), currency:cryptoCurrency.value})
     });
     const data = await res.json();
     if(data.success) alert(data.message);
     else alert(data.error);
-  }catch(e){alert(e.message);}
+  } catch(e){ alert(e.message); }
 });
 
-// Withdraw crypto
+// -------------------- CRYPTO WITHDRAW --------------------
 withdrawBtn.addEventListener("click", async ()=>{
   try{
-    const res = await fetch(`https://us-central1-afripay-bridge.cloudfunctions.net/cryptoWithdraw`,{
+    const user = auth.currentUser;
+    if(!user) return alert("Login first");
+
+    const res = await fetch(`https://us-central1-afripay-bridge.cloudfunctions.net/cryptoWithdraw`, {
       method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({uid: auth.currentUser.uid, amount:parseFloat(cryptoAmount.value), currency:cryptoCurrency.value})
+      headers: {"Content-Type":"application/json"},
+      body: JSON.stringify({uid:user.uid, amount:parseFloat(cryptoAmount.value), currency:cryptoCurrency.value})
     });
     const data = await res.json();
     if(data.success) alert(data.message);
     else alert(data.error);
-  }catch(e){alert(e.message);}
+  } catch(e){ alert(e.message); }
 });
-
 </script>
 </body>
 </html>
